# HIT-CGVR

./: .gitignore  README.md
lab1/: CMakeLists.txt
lab1/src/: glad.c  main.cpp  shader.cpp  shader.h
lab2/: CMakeLists.txt
lab2/src/: camera.h  main.cpp  shader.cpp
lab3/: CMakeLists.txt
lab3/include/glad/: glad.h
lab3/include/glm/gtc/: type_ptr.hpp
lab3/res/shader/: phong.frag  phong.vert
lab3/src/: main.cpp
lab4/: CMakeLists.txt
lab4/res/shader/: circle.frag  circle.vert  quad.frag  quad.vert
lab4/src/: main.cpp  shader.h
tetris/: README.md  constants.py  draw.py  events.py  fonts.py  main.py  tetrimino.py  utils.py
